welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:9: error: type mismatch;
 found   : Unit
 required: Int
	} else if (((a>=13 && a<=19) && (b>=13 && b<=19) && (c>=13 && c<=19)) || (d>=13 && d<=19))
               ^